<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- ================= TITLE ================= -->
        <TextView
            android:id="@+id/tvTitle"
            android:text="@string/tambah_item"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <!-- ================= CATEGORY ================= -->
        <TextView
            android:text="@string/category"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/bg_edittext"
                app:drawableEndCompat="@android:drawable/arrow_down_float" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- ================= NAMA ITEM ================= -->
        <TextView
            android:text="@string/nama"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="@string/nama_item"
            android:layout_marginTop="4dp" />



        <!-- ================= HARGA & COGS (2 KOLOM) ================= -->
        <LinearLayout
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <!-- HARGA -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp">

                <TextView
                    android:text="@string/harga"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:minHeight="48dp"
                    android:hint="@string/harga"
                    android:inputType="number"
                    android:gravity="end"
                    android:textAlignment="viewEnd"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>

            <!-- COGS -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp">

                <TextView
                    android:text="@string/cogs"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/etCogs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/cogs"
                    android:minHeight="48dp"
                    android:inputType="number"
                    android:gravity="end"
                    android:textAlignment="viewEnd"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>
        </LinearLayout>

        <!-- ================= BUTTON SIMPAN ================= -->
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan"
            android:layout_marginTop="20dp"/>

        <!-- ================= BUTTON DELETE ================= -->
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hapus"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/error"
            android:textColor="@android:color/white"
            android:visibility="gone"/>

    </LinearLayout>

</ScrollView>
